Fix z-index

--- a/css/wprest_main.css
+++ b/css/wprest_main.css
@@ -40,6 +40,7 @@ body {
   color: #fff;
   top: 25%; }
   body .container-fluid {
+    position: relative;
     z-index: 1; }
   body:before {
     -webkit-animation: rotate 720s linear infinite;
